--- a/Blackmail/BlackMailerCompanion.css
+++ b/Blackmail/BlackMailerCompanion.css
@@ -6,7 +6,7 @@ body {
 
 body {
     text-align: center;
-    display: grid;
+    display: ;
     grid-template-rows: min-content min-content auto;
 }
 
